@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::Most tests => 7;
+use Test::Most tests => 8;
 use Test::NoWarnings;
 
 BEGIN {
@@ -35,4 +35,5 @@ DISTANCE: {
 	]);
 
 	ok($loc->as_string() =~ /New Brunswick/);
+	ok($loc =~ /New Brunswick/);
 }
